scrolling to sections fixed - title is visible

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -28,8 +28,8 @@ body {
 }
 
 .content {
-    border-top: 8px solid @dark;
-    box-shadow: inset 0 0px 0 @blue;
+    border-top: 60px solid transparent;
+    box-shadow: inset 0 8px 0 @dark;
     position: relative;
 
     &:before {
@@ -41,7 +41,7 @@ body {
         height: 0;
         margin-left: -203px;
         position: absolute;
-        top: 7px;
+        top: 15px;
         left: 50%;
         width: 306px;
         z-index: -1;
@@ -56,7 +56,7 @@ body {
         height: 0;
         margin-left: -200px;
         position: absolute;
-        top: -1px;
+        top: 7px;
         left: 50%;
         width: 300px;
         z-index: -1;
