--- a/src/styles/intro.less
+++ b/src/styles/intro.less
@@ -1,5 +1,6 @@
 .intro {
     background: url(images/toronto.png) no-repeat center bottom;
+    box-shadow: 0 60px 0 @dark;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 2rem;
     height: calc(100vh - 3em);
