--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -7,6 +7,11 @@
 	cursor: pointer;
     margin: 1rem .5rem;
 	perspective: 1000px;
+	transition: all .2s linear;
+
+	&:hover {
+		border-bottom-color: @blue;
+	}
 
 	@names: indigo, sunlife, olg, food-network, globe, aeroplan,
 			home-depot, geico, loreal, reebok, rexall, ryerson-university;
